# marl-trading

./: .gitignore  AGENT_CATALOG.md  COMMANDS.md  COMPARISON_FIELDS.md  PROJECT_STATE.md  README.md  THESIS.md  live_viewer_breakdown.txt  live_viewer_breakdown_summary.md  market_health_summary.md  market_health_tests.txt  pyproject.toml  requirements.txt
checkpoints/: maskableppo_baseline_rl_01_v2_5agent_100k.json  maskableppo_baseline_rl_01_v2_maskfix_5agent_100k.json  maskableppo_baseline_rl_02_vs_frozen_rl_01_v1_6agent_100k.json  maskableppo_baseline_rl_02_vs_frozen_rl_01_v1_rewardfix_6agent_100k.json  maskableppo_baseline_rl_02_vs_frozen_rl_01_v1_softinv_a_6agent_100k.json  maskableppo_baseline_rl_02_vs_frozen_rl_01_v1_softinv_b_6agent_100k.json  maskableppo_baseline_trend_01_liquidityaware_50k.json  maskableppo_baseline_trend_01_makerv2_50k.json  maskableppo_baseline_trend_01_multiseed8_100k.json  maskableppo_baseline_trend_01_multiseed8_sellpressurev3_100k.json  maskableppo_baseline_trend_01_phaseA_50k.json  ppo_baseline_trend_01.json  ppo_baseline_trend_01_long.json  ppo_baseline_trend_01_masked_realized_inactive1e-2_50k.json  ppo_baseline_trend_01_phaseA_50k.json  ppo_baseline_trend_01_realized_inactive1e-2_50k.json  ppo_baseline_trend_01_zeroinv_50k.json  ppo_baseline_trend_01_zeroinv_risk5e-4_50k.json
scripts/: __init__.py  compare_market_runs.py  eval_rl_agent.py  replay_market.py  run_market_demo.py  run_market_health.py  serve_market_view.py  train_rl_agent.py
tests/: test_agent_behavior_overrides.py  test_agents_scripted.py  test_analysis_comparison.py  (+21 more)
(+45 files in other folders)
