[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marl-trading"
version = "0.1.0"
description = "Synthetic market simulation and MARL thesis scaffold"
readme = "THESIS.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{name = "Codex"}]
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
rl = [
    "gymnasium>=0.29,<1.0",
    "stable-baselines3>=2.3,<3.0",
    "sb3-contrib>=2.3,<3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
